--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.4",
     "@fortawesome/free-solid-svg-icons": "^5.3.1",
     "@fortawesome/react-fontawesome": "^0.1.3",
+    "highcharts": "^6.1.3",
     "i": "^0.3.6",
     "npm": "^6.4.1",
     "react": "^16.2.0",
@@ -29,6 +30,8 @@
     "babel-loader": "^7.1.3",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
+    "enzyme": "^3.6.0",
+    "enzyme-adapter-react-16": "^1.5.0",
     "webpack": "^4.0.1",
     "webpack-cli": "^2.0.9"
   }
