--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@fortawesome/free-solid-svg-icons": "^5.3.1",
     "@fortawesome/react-fontawesome": "^0.1.3",
     "highcharts": "^6.1.3",
+    "highcharts-react-official": "^1.4.0",
+    "highstock-release": "^6.0.4",
     "i": "^0.3.6",
     "npm": "^6.4.1",
     "react": "^16.2.0",
