--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "babel-preset-react": "^6.24.1",
     "enzyme": "^3.6.0",
     "enzyme-adapter-react-16": "^1.5.0",
+    "react-test-renderer": "^16.5.2",
     "webpack": "^4.0.1",
     "webpack-cli": "^2.0.9"
   }
