--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "dev": "webpack --mode development",
     "build": "webpack --mode production"
   },
@@ -17,9 +17,6 @@
     ]
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.4",
-    "@fortawesome/free-solid-svg-icons": "^5.3.1",
-    "@fortawesome/react-fontawesome": "^0.1.3",
     "highcharts": "^6.1.3",
     "highcharts-react-official": "^1.4.0",
     "highstock-release": "^6.0.4",
@@ -35,6 +32,7 @@
     "babel-preset-react": "^6.24.1",
     "enzyme": "^3.6.0",
     "enzyme-adapter-react-16": "^1.5.0",
+    "jest": "^22.4.2",
     "react-test-renderer": "^16.5.2",
     "webpack": "^4.0.1",
     "webpack-cli": "^2.0.9"
